@@ -1,3 +1,7 @@
+
+19 May 2004 Andreas Fabri
+- The coordinate iterator is now const FT* (change in Cartesian.h, Cartesian_base.h, Point_2.h, Point_3.h)
+
 19 May 2004 Sylvain Pion
 - Cartesian_converter : add conversions for FT, Bbox_2 and Bbox_3.
 
